Added Full Messages Module View

--- a/www/templates/app_messages_outbox.html
+++ b/www/templates/app_messages_outbox.html
@@ -1,4 +1,4 @@
-<ion-view view-title="INBOX">
+<ion-view view-title="Outbox">
   <ion-contentn class="has-tabs">
   <br><br>
 	<div class="list list-inset">
@@ -13,12 +13,12 @@
 		</div>
 	</div>
 	  <div class="tabs-striped tabs-icon-top tabs-color-balanced ">
-	    <div class="tabs">
-	      <a class="tab-item active" href="#/app/messages">
+	    <div class="tabs ">
+	      <a class="tab-item" href="#/app/messages">
 	        <i class="icon ion-chatboxes"></i>
 	        INBOX
 	      </a>
-	      <a class="tab-item" href="#/app/messages_outbox">
+	      <a class="tab-item active" href="#/app/messages_outbox">
 	        <i class="icon ion-paper-airplane"></i>
 	        OUTBOX
 	      </a>
