--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -27,6 +27,9 @@
         <ion-item menu-close href="#/app/messages">
           Messages
         </ion-item>
+        <ion-item menu-close href="#/app/events">
+          Events
+        </ion-item>
         <ion-item menu-close href="#/app/search">
           Search
         </ion-item>
