Fixed ion-pane tab bugs

--- a/www/templates/app_messages_outbox.html
+++ b/www/templates/app_messages_outbox.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Outbox">
-  <ion-contentn class="has-tabs">
+  <ion-pane>
   <br><br>
 	<div class="list list-inset">
 		<div class="item">
@@ -28,5 +28,5 @@
 	      </a>
 	    </div>
 	  </div>
-  </ion-content>
+  </ion-pane>
 </ion-view>
