--- a/www/templates/app_messages_compose.html
+++ b/www/templates/app_messages_compose.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Compose">
-  <ion-contentn class="has-tabs">
+  <ion-pane>
   	<br><br>
 	<div class="list">
 		<br>
@@ -43,5 +43,5 @@
 	      </a>
 	    </div>
 	  </div>
-  </ion-content>
+  </ion-pane>
 </ion-view>
