Fixed Landing Page

--- a/www/templates/home_landing.html
+++ b/www/templates/home_landing.html
@@ -1,7 +1,7 @@
 <ion-view view-title="UPang iForeign">
 	<ion-content>
 		<div class="padding">
-			<a href="#" class="button button-energized button-block">
+			<a href="#/home/step" class="button button-energized button-block">
 			  How to use the app
 			</a>
 			<a href="#" class="button button-energized button-block">
