Changed Redirection Location on Login

--- a/www/templates/home_login.html
+++ b/www/templates/home_login.html
@@ -14,7 +14,7 @@
 			<!-- <button class="button button-block button-energized">
 			  Sign In
 			</button> -->
-			<a href="#/app/playlists" class="button button-block button-energized">
+			<a href="#/app/dashboard" class="button button-block button-energized">
 			  Sign In
 			</a>
 		</div>
