--- a/www/templates/app_messages_outbox.html
+++ b/www/templates/app_messages_outbox.html
@@ -1,17 +1,13 @@
 <ion-view view-title="Outbox">
   <ion-pane>
-  <br><br>
-	<div class="list list-inset">
-		<div class="item">
-		Message Here
-		</div>
-		<div class="item">
-		Message Here
-		</div>
-		<div class="item">
-		Message Here
+  <ion-content>
+	<div class="list list-item">
+		<div class="item" ng-repeat="outbox in outboxes">
+		<label>{{ outbox.from_id }}</label>
+		{{ outbox.msg }}
 		</div>
 	</div>
+  </ion-content>
 	  <div class="tabs-striped tabs-icon-top tabs-color-balanced ">
 	    <div class="tabs ">
 	      <a class="tab-item" href="#/app/messages">
