--- a/www/templates/app_testimonial.html
+++ b/www/templates/app_testimonial.html
@@ -1,25 +1,20 @@
 <ion-view view-title="1st Sem Testimonials">
   <ion-pane>
-  <br><br>
-  <div class="row">
-	<div class="list card">
+  <ion-content>
+	<div class="row" ng-repeat="testimonial in testimonials">
+		<div class="list card" style="width:100%">
+			<div class="item "> <!-- item-avatar-->
+				<h2>{{ testimonial.by }} - {{ testimonial.country }}</h2>
+				<p>{{ testimonial.date }}</p>
+			</div>
+			<div class="item item-body item-text-wrap">
+				<p>{{  testimonial.title }}</p>
+				<p>{{  testimonial.body }}</p>
+			</div>
+		</div>
+	</div>  	
+  </ion-content>
 
-	<div class="item "> <!-- item-avatar-->
-		<h2>Ambassador Name</h2>
-		<p>November 05, 1955</p>
-	</div>
-
-	<div class="item item-body">
-		<p>
-		This is a paragraph where the ambassador will testify some paragraphs. Which we all know is made up to lift the school and attract more enrolees. Lol!
-		</p>
-		<!-- <p>
-		<a href="#" class="subdued">1 Like</a>
-		<a href="#" class="subdued">5 Comments</a>
-		</p> -->
-	</div>
-	</div>
-  </div>
 	<div class="tabs tabs-striped tabs-color-balance">
 	  <a class="tab-item active" href="#/app/testimonials">
 	    1st SEM
