passed sessionStorage value to view

--- a/www/templates/app_dashboard.html
+++ b/www/templates/app_dashboard.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Welcome!">
   <ion-content>
-    <h1>Welcome 03-1314-00916</h1>
+    <h3>Welcome <small>{{  studentNumber }}</small></h3>
   </ion-content>
 </ion-view>
