--- a/www/templates/home_login.html
+++ b/www/templates/home_login.html
@@ -18,7 +18,7 @@
 			  Sign In
 			</a> -->
 			<br>
-			<p ng-show="unable" style="color:red;text-align:center">Unable to Login</p>
+			<p ng-show="unable" style="color:red;text-align:center">Unable to Login. Incorrect details.</p>
 		</div>
 
 	</ion-content>
