--- a/www/templates/app_events.html
+++ b/www/templates/app_events.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Events">
+<ion-view cache-view="false" view-title="Events">
   <ion-content>
 	<div class="padding">
 		<label>Cards of upcoming events.</label>
