--- a/www/templates/app_suggestions.html
+++ b/www/templates/app_suggestions.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Suggestions">
+<ion-view cache-view="false" view-title="Suggestions">
   <ion-content>
 	<div class="padding">
 		<label>Please write your suggestions. We're glad to hear from you!</label>
