--- a/www/templates/app_testimonial.html
+++ b/www/templates/app_testimonial.html
@@ -1,4 +1,4 @@
-<ion-view view-title="1st Sem Testimonials">
+<ion-view cache-view="false" view-title="1st Sem Testimonials">
   <ion-pane>
   <ion-content>
 	<div class="row" ng-repeat="testimonial in testimonials">
