--- a/www/templates/app_testimonial_sem.html
+++ b/www/templates/app_testimonial_sem.html
@@ -1,4 +1,4 @@
-<ion-view view-title="2nd Sem Testimonials">
+<ion-view cache-view="false" view-title="2nd Sem Testimonials">
   <ion-pane>
   <ion-content>
 	<div class="row">
