--- a/www/templates/home_landing.html
+++ b/www/templates/home_landing.html
@@ -1,15 +1,16 @@
-<ion-view view-title="UPang iForeign">
-	<ion-content>
+<ion-view cache-view="false" view-title="UPang iForeign">
+	<ion-pane>
+	<br><br><br>
 		<div class="padding">
 			<a href="#/home/step" class="button button-energized button-block">
 			  How to use the app
-			</a>
+			</a><br>
 			<a href="#" class="button button-energized button-block">
 			  Watch Video
-			</a>
+			</a><br>
 			<a href="#/home/login" class="button button-energized button-block">
 			  Login
 			</a>
 		</div>
-	</ion-content>
+	</ion-pane>
 </ion-view>
