--- a/www/templates/home_step.html
+++ b/www/templates/home_step.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Steps">
-	<ion-content>
+	<ion-pane>
+	<br><br>
 	<div class="card">
 		<div class="item item-text-wrap">
 		<ul>
@@ -12,5 +13,5 @@
 			</ul>
 		</div>
 	</div>
-	</ion-content>
+	</ion-pane>
 </ion-view>
