--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -39,7 +39,7 @@
         <ion-item menu-close href="#/app/suggestions">
            <i class="icon ion-speakerphone"></i>&nbsp;&nbsp;&nbsp;&nbsp; Suggestions
         </ion-item>
-        <ion-item menu-close href="#">
+        <ion-item menu-close href="#/app/landing">
            <i class="icon ion-close-circled"></i>&nbsp;&nbsp;&nbsp;&nbsp; Logout
         </ion-item>
         <!-- <ion-item menu-close href="#/app/search">
