--- a/www/templates/app_dashboard.html
+++ b/www/templates/app_dashboard.html
@@ -1,5 +1,8 @@
-<ion-view view-title="Welcome!">
+<ion-view cache-view="false" view-title="Welcome!">
+
   <ion-content>
-    <h3>Welcome <small>{{  studentNumber }}</small></h3>
+	  <div class="padding">
+	  	<h3>Welcome <small>{{  studentNumber }}</small></h3>
+	  </div>
   </ion-content>
 </ion-view>
