--- a/www/templates/app_profile.html
+++ b/www/templates/app_profile.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Student Profile">
+<ion-view cache-view="false" view-title="Student Profile">
   <ion-content>
 	<div class="list list-inset">
 		<label class="item item-input">
