--- a/www/templates/home_login.html
+++ b/www/templates/home_login.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Student Login">
+<ion-view cache-view="false" view-title="Student Login">
 	<ion-content>
 		<div class="list">
 		  <label class="item item-input item-stacked-label">
@@ -7,7 +7,7 @@
 		  </label>
 		  <label class="item item-input item-stacked-label">
 		    <span class="input-label">Password</span>
-		    <input type="text" ng-model="txtPassword" placeholder="enter password">
+		    <input type="text" ng-model="txtPassword" placeholder="Lalata">
 		  </label>
 		</div>
 		<div class="padding">
