--- a/www/templates/app_messages.html
+++ b/www/templates/app_messages.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false"  view-title="INBOX">
+<ion-view   view-title="INBOX">
   <ion-pane>
   <ion-content>
 	<ion-refresher
@@ -7,9 +7,9 @@
 	</ion-refresher>
 	
 	<div class="list list-item">
-		<div class="item" ng-repeat="inbox in messages">
-		<label>{{ inbox.from }}</label><br>
-		{{  inbox.msg }}
+		<div class="item" ng-repeat="inbox in messages" ng-click="passValue(inbox.id ,  inbox.from, inbox.msg)">
+			<label>{{ inbox.from }}</label><br>
+			{{  inbox.msg }}		
 		</div>
 	</div>
   </ion-content>
