--- a/www/templates/home_step.html
+++ b/www/templates/home_step.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Steps">
+<ion-view cache-view="false" view-title="Steps">
 	<ion-pane>
 	<br><br>
 	<div class="card">
@@ -8,9 +8,9 @@
 					<p>Register an account in our website <a href="http://infosys.esy.es/form.php">http://infosys.esy.es/form.php</a>. Fill it up with correct information.</p>
 				</li><br>
 				<li>
-					<p>After Registration, You can now use the app exclusively for foreign students. Feel p>
+					<p>After Registration, You can now use the app exclusively for foreign students. Feel.
 				</li>
-			</ul>
+		</ul>
 		</div>
 	</div>
 	</ion-pane>
