--- a/www/templates/app_profile.html
+++ b/www/templates/app_profile.html
@@ -1,41 +1,70 @@
 <ion-view cache-view="false" view-title="Student Profile">
   <ion-content>
-	<div class="list list-inset">
-		<label class="item item-input">
-			<input type="text" placeholder="First Name">
+	<div class="list">
+		<label class="item item-input item-stacked-label">
+    		<span class="input-label">Last Name:</span><br>
+    		{{ profile_data.lastname }}
 		</label>
-		<br>
-		<label class="item item-input">
-			<input type="text" placeholder="Midle Name">
+		<label class="item item-input item-stacked-label">
+    		<span class="input-label">First Name:</span>
+			<br>
+    		{{ profile_data.firstname }}
 		</label>
-		<br>
-		<label class="item item-input">
-			<input type="text" placeholder="Last Name">
+		<label class="item item-input item-stacked-label">
+    		<span class="input-label">Middle Name:</span>
+			<br>
+			{{ profile_data.middlename }}
 		</label>
-		<br>
-		<label class="item item-input">
-			<input type="text" placeholder="Birthdate">
+		<label class="item item-input item-stacked-label">
+    		<span class="input-label">Gender:</span>
+			<br>
+			{{ profile_data.middlename }}
 		</label>
-		<br>
+		<label class="item item-input item-stacked-label">
+    		<span class="input-label">Birthdate:</span>
+			<br>
+			<input type="text" ng-model="txtBirthdate">
+		</label>
 		<div class="item row" style="padding:0">
 			<div class="col" style="padding:0">
-				<label class="item item-input">
-					<input type="text" placeholder="Age">
+				<label class="item item-input item-stacked-label">
+    				<span class="input-label">Age:</span>
+					<br>
+    				{{ profile_data.age }}
 				</label>
 			</div>
 			<div class="col" style="padding:0">
-				<label class="item item-input">
-					<input type="text" placeholder="Race">
+				<label class="item item-input item-stacked-label">
+    				<span class="input-label">Citizenship:</span>
+					<br>
+    				{{ profile_data.citizenship }}
 				</label>
 			</div>
 		</div>
-		<br>
-		<label class="item item-input">
-			<input type="text" placeholder="Address">
+		<label class="item item-input item-stacked-label">
+    		<span class="input-label">Home Address:</span>
+			<br>
+    		<input type="text" ng-model="txtAddress">
+		</label>
+		<label class="item item-input item-stacked-label">
+    		<span class="input-label">Country:</span>
+			<br>
+    		{{ profile_data.country }}
+		</label>
+		<label class="item item-input item-stacked-label">
+    		<span class="input-label">Contact:</span>
+			<br>
+    		{{ profile_data.contact }}
+		</label>
+		<label class="item item-input item-stacked-label">
+    		<span class="input-label">Email:</span>
+			<br>
+    		{{ profile_data.email }}
 		</label>
 	</div>
 	<div class="padding">
-		<button class="button button-full button-energized">
+		<p style="color: green;text-align: center;" ng-show="updated">Profile Updated!</p>
+		<button class="button button-full button-energized" ng-click="update()" ng-hide="updated">
 			Update Profile
 		</button>
 	</div>
