--- a/www/templates/app_suggestions.html
+++ b/www/templates/app_suggestions.html
@@ -1,22 +1,23 @@
 <ion-view cache-view="false" view-title="Suggestions">
-  <ion-content>
+  <ion-pane><br><br>
 	<div class="padding">
 		<label>Please write your suggestions. We're glad to hear from you!</label>
 	</div>
 	<div class="list list-inset">
 		<label class="item item-input">
-			<input type="text" placeholder="Student Number">
+			Student Number: {{ studentNumber }}
 		</label>
 		<br>
-		<ion-item>
-			<ion-label>Message</ion-label>
-			<textarea cols="50" rows="8" style="resize:none"></textarea>
-		</ion-item>
+		<div class="item">
+			<textarea cols="50" rows="8" style="resize:none" placeholder="Enter your message.." ng-model="txtSuggestion"></textarea>
+		</div>
 	</div>
 	<div class="padding">
-		<button class="button button-block button-energized">
+		<button class="button button-block button-energized" ng-click="suggest()">
 		Submit
 		</button>
+		<p style="color:red; text-align: center;" ng-show="msgEmpty">Message field if empty!</p>
+		<p style="color:green; text-align: center;" ng-show="sent">Suggestion sent!</p>
 	</div>
-  </ion-content>
+  </ion-pane>
 </ion-view>
