Added video view redireciton

--- a/www/templates/home_landing.html
+++ b/www/templates/home_landing.html
@@ -5,7 +5,7 @@
 			<a href="#/home/step" class="button button-energized button-block">
 			  How to use the app
 			</a><br>
-			<a href="#" class="button button-energized button-block">
+			<a href="#/home/video" class="button button-energized button-block">
 			  Watch Video
 			</a><br>
 			<a href="#/home/login" class="button button-energized button-block">
