Added pop up dialog

--- a/www/templates/home_login.html
+++ b/www/templates/home_login.html
@@ -3,11 +3,11 @@
 		<div class="list">
 		  <label class="item item-input item-stacked-label">
 		    <span class="input-label">Username</span>
-		    <input type="text" ng-model="txtUsername" placeholder="03-1314-000916">
+		    <input type="text" ng-model="txtUsername">
 		  </label>
 		  <label class="item item-input item-stacked-label">
 		    <span class="input-label">Password</span>
-		    <input type="text" ng-model="txtPassword" placeholder="Lalata">
+		    <input type="password" ng-model="txtPassword">
 		  </label>
 		</div>
 		<div class="padding">
@@ -18,7 +18,7 @@
 			  Sign In
 			</a> -->
 			<br>
-			<p ng-show="unable" style="color:red;text-align:center">Unable to Login. Incorrect details.</p>
+			<!-- <p ng-show="unable" style="color:red;text-align:center">Unable to Login. Incorrect details.</p> -->
 		</div>
 
 	</ion-content>
