Changed to Hello

--- a/www/templates/app_dashboard.html
+++ b/www/templates/app_dashboard.html
@@ -2,7 +2,7 @@
 
   <ion-content>
 	  <div class="padding">
-	  	<h3>Welcome <small>{{  studentNumber }}</small></h3>
+	  	<h3>Hello <small>{{  studentNumber }}</small></h3>
 	  </div>
   </ion-content>
 </ion-view>
