Final Bulletin Board

--- a/www/templates/app_messages_compose.html
+++ b/www/templates/app_messages_compose.html
@@ -21,11 +21,9 @@
 		</div>
 	</div>
 	<div class="padding">
-		<button class="button button-energized button-full" ng-click="sendMessage()">
+		<button class="button button-energized button-full" ng-click="sendMessage('Message Sent!','short','bottom')">
 		  Send Message
 		</button>
-		<p style="color:red;text-align:center" ng-show="not_sent"><br>Message not sent. Either field is empty!</p>
-		<p style="color:green;text-align:center" ng-show="sent"><br>Message has been sent!</p>
 	</div>
 
 	  <div class="tabs-striped tabs-icon-top tabs-color-balanced ">
