--- a/www/templates/app_messages_expand_outbox.html
+++ b/www/templates/app_messages_expand_outbox.html
@@ -3,7 +3,9 @@
   	<br><br><br>
   	<div class="padding">
   		<p>To: {{ passedOutboxTo }}</p>
-	  	<p>{{ passedOutboxMessage }}</p>
+		<label>{{ passedOutboxDate }}</label><br><br>
+
+	  	<p>Message: <br>{{ passedOutboxMessage }}</p>
 
 		
   	</div>
