--- a/www/templates/home_login.html
+++ b/www/templates/home_login.html
@@ -11,7 +11,7 @@
 		  </label>
 		</div>
 		<div class="padding">
-			<button class="button button-block button-energized" ng-click="signIn()">
+			<button class="button button-block button-energized" ng-click="signIn('Login Failed. Incorrect credentials.','long','bottom')">
 			  Sign In
 			</button>
 <!-- 			<a href="#/app/dashboard" class="button button-block button-energized">
