--- a/www/templates/home_video.html
+++ b/www/templates/home_video.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false" view-title="Watch Video">
+<ion-view view-title="Watch Video">
 	<ion-pane>
 	<br><br>
 	<div class="card">
