--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -30,14 +30,17 @@
         <ion-item menu-close href="#/app/events">
            <i class="icon ion-calendar"></i>&nbsp;&nbsp;&nbsp;&nbsp; Events
         </ion-item>
+        <ion-item menu-close href="#/app/board">
+           <i class="icon ion-speakerphone"></i>&nbsp;&nbsp;&nbsp;&nbsp; Bulletin Board
+        </ion-item>
         <ion-item menu-close href="#/app/profile">
            <i class="icon ion-person"></i>&nbsp;&nbsp;&nbsp;&nbsp; Student Profile
         </ion-item>
-        <ion-item menu-close href="#/app/testimonials">
+        <ion-ietm menu-close href="#/app/testimonials">
            <i class="icon ion-clipboard"></i>&nbsp;&nbsp;&nbsp;&nbsp; Testimonials
         </ion-item>
         <ion-item menu-close href="#/app/suggestions">
-           <i class="icon ion-speakerphone"></i>&nbsp;&nbsp;&nbsp;&nbsp; Suggestions
+           <i class="icon ion-archive"></i>&nbsp;&nbsp;&nbsp;&nbsp; Suggestions
         </ion-item>
         <ion-item menu-close href="#/app/landing">
            <i class="icon ion-close-circled"></i>&nbsp;&nbsp;&nbsp;&nbsp; Logout
