--- a/www/templates/app_messages.html
+++ b/www/templates/app_messages.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false" view-title="INBOX">
+<ion-view  view-title="INBOX">
   <ion-pane>
   <ion-content>
 	<ion-refresher
@@ -7,7 +7,7 @@
 	</ion-refresher>
 	
 	<div class="list list-item">
-		<div class="item" ng-show ="has_message" ng-repeat="inbox in messages" ng-click="passValue(inbox.id ,  inbox.from, inbox.msg)">
+		<div class="item" ng-show ="has_message" ng-repeat="inbox in messages" ng-click="passValue(inbox.id ,  inbox.from, inbox.msg, inbox.date)">
 			<label>From: {{ inbox.from }}</label><br><br>
 			{{  inbox.msg }}		
 		</div>
@@ -15,6 +15,8 @@
 			No Messages to Show.	
 		</div>
 	</div>
+
+  <br><br>
   </ion-content>
 	  <div class="tabs-striped tabs-icon-top tabs-color-balanced ">
 	    <div class="tabs">
