--- a/www/templates/app_profile.html
+++ b/www/templates/app_profile.html
@@ -64,7 +64,7 @@
 	</div>
 	<div class="padding">
 		<p style="color: green;text-align: center;" ng-show="updated">Profile Updated!</p>
-		<button class="button button-full button-energized" ng-click="update()" ng-hide="updated">
+		<button class="button button-full button-energized" ng-click="update('Profile Updated!','short','bottom')">
 			Update Profile
 		</button>
 	</div>
