--- a/www/templates/app_suggestions.html
+++ b/www/templates/app_suggestions.html
@@ -13,11 +13,9 @@
 		</div>
 	</div>
 	<div class="padding">
-		<button class="button button-block button-energized" ng-click="suggest()">
+		<button class="button button-block button-energized" ng-click="suggest('Suggestion Sent!','short','bottom')">
 		Submit
 		</button>
-		<p style="color:red; text-align: center;" ng-show="msgEmpty">Message field if empty!</p>
-		<p style="color:green; text-align: center;" ng-show="sent">Suggestion sent!</p>
 	</div>
   </ion-pane>
 </ion-view>
