--- a/www/templates/home_step.html
+++ b/www/templates/home_step.html
@@ -1,17 +1,15 @@
 <ion-view cache-view="false" view-title="Steps">
 	<ion-pane>
 	<br><br>
-	<div class="card">
-		<div class="item item-text-wrap">
+	<div class="padding">
 		<ul>
 				<li>
 					<p>Register an account in our website <a href="http://infosys.esy.es/form.php">http://infosys.esy.es/form.php</a>. Fill it up with correct information.</p>
 				</li><br>
 				<li>
-					<p>After Registration, You can now use the app exclusively for foreign students. Feel.
+					<p>After Registration, You can now use the app exclusively for foreign students. Feel free to express yourselves here. We want the best for you!
 				</li>
 		</ul>
-		</div>
 	</div>
 	</ion-pane>
 </ion-view>
