--- a/www/templates/home_login.html
+++ b/www/templates/home_login.html
@@ -1,5 +1,5 @@
 <ion-view cache-view="false" view-title="Student Login">
-	<ion-content>
+	<ion-content overflow-scroll="false">
 		<div class="list">
 		  <label class="item item-input item-stacked-label">
 		    <span class="input-label">Username</span>
